bug squishing + refactor + redesign unauthed hero

--- a/src/app.css
+++ b/src/app.css
@@ -4,10 +4,7 @@
 @tailwind utilities;
 *{
 	box-sizing: border-box;
-	font-family: 'Inter', sans-serif;
-}
-img{
-	box-shadow: -2px 2px 2px rgba(0,0,0, .8), -4px 4px 4px rgba(0,0,0, .6);
+	font-family: 'Outfit', sans-serif;
 }
 @media screen and (max-width: 767px) {
 	input, select, textarea {
